--- a/Klike/Interfaces/EventListCell.xib
+++ b/Klike/Interfaces/EventListCell.xib
@@ -7,72 +7,78 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventListCell" rowHeight="175" id="GnW-lY-Uf8" customClass="KLEventListCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="EventListCell" id="GnW-lY-Uf8" customClass="KLEventListCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="177"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GnW-lY-Uf8" id="glh-rJ-Y96">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="test_bg" translatesAutoresizingMaskIntoConstraints="NO" id="YkB-xl-zeO" customClass="PFImageView">
-                        <rect key="frame" x="0.0" y="0.0" width="112" height="166"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YkB-xl-zeO" customClass="PFImageView">
+                        <rect key="frame" x="0.0" y="0.0" width="112" height="168"/>
+                        <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="112" id="V6m-kz-gwe"/>
+                            <constraint firstAttribute="height" constant="168" id="g6t-Wp-YJQ"/>
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r4D-EI-S5B">
-                        <rect key="frame" x="0.0" y="166" width="320" height="8"/>
+                        <rect key="frame" x="0.0" y="168" width="320" height="8"/>
                         <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="8" id="4eE-wE-pUi"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beach Party" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dak-jT-Avk">
-                        <rect key="frame" x="127" y="30" width="170" height="24"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beach Party" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dak-jT-Avk">
+                        <rect key="frame" x="126" y="17" width="171" height="24"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dec 23, 5 miles — North Beach" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AMJ-12-IUi">
-                        <rect key="frame" x="127" y="63" width="178" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dec 23, 5 miles — North Beach" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AMJ-12-IUi">
+                        <rect key="frame" x="127" y="44" width="178" height="14"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="baf-Xn-054">
-                        <rect key="frame" x="127" y="90" width="49" height="24"/>
-                        <color key="backgroundColor" red="0.015686274509803921" green="0.58039215686274503" blue="0.70196078431372544" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="24" id="VTV-b6-Waa"/>
-                        </constraints>
+                        <rect key="frame" x="128" y="72" width="49" height="24"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="12"/>
+                        <color key="tintColor" red="0.015686274510000001" green="0.58039215690000001" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
                         <inset key="contentEdgeInsets" minX="12" minY="0.0" maxX="12" maxY="1"/>
-                        <state key="normal" title="Free">
+                        <state key="normal" title="Free" backgroundImage="profile_price_label">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="dak-jT-Avk" firstAttribute="top" secondItem="glh-rJ-Y96" secondAttribute="topMargin" constant="22" id="7FJ-cy-JT9"/>
+                    <constraint firstItem="dak-jT-Avk" firstAttribute="top" secondItem="glh-rJ-Y96" secondAttribute="topMargin" constant="9" id="7FJ-cy-JT9"/>
                     <constraint firstAttribute="trailing" secondItem="r4D-EI-S5B" secondAttribute="trailing" id="7Rc-Mm-fRC"/>
-                    <constraint firstItem="dak-jT-Avk" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="15" id="80t-L0-OoG"/>
+                    <constraint firstItem="AMJ-12-IUi" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="15" id="9Yw-h1-nNV"/>
                     <constraint firstAttribute="trailing" secondItem="AMJ-12-IUi" secondAttribute="trailing" constant="15" id="AoA-9L-X04"/>
                     <constraint firstAttribute="bottom" secondItem="r4D-EI-S5B" secondAttribute="bottom" id="DM0-HA-oju"/>
-                    <constraint firstItem="baf-Xn-054" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="15" id="Dkf-dG-5Nu"/>
                     <constraint firstItem="YkB-xl-zeO" firstAttribute="leading" secondItem="glh-rJ-Y96" secondAttribute="leading" id="F47-BR-RmF"/>
                     <constraint firstAttribute="trailingMargin" secondItem="dak-jT-Avk" secondAttribute="trailing" constant="15" id="IlA-M3-7Pu"/>
-                    <constraint firstItem="baf-Xn-054" firstAttribute="top" secondItem="AMJ-12-IUi" secondAttribute="bottom" constant="13" id="L46-gA-ADi"/>
+                    <constraint firstItem="baf-Xn-054" firstAttribute="top" secondItem="AMJ-12-IUi" secondAttribute="bottom" constant="14" id="L46-gA-ADi"/>
                     <constraint firstItem="r4D-EI-S5B" firstAttribute="top" secondItem="YkB-xl-zeO" secondAttribute="bottom" id="bpe-Bb-j5d"/>
+                    <constraint firstItem="dak-jT-Avk" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="14" id="fjJ-98-vJq"/>
                     <constraint firstItem="r4D-EI-S5B" firstAttribute="leading" secondItem="glh-rJ-Y96" secondAttribute="leading" id="p4Y-3A-8I4"/>
-                    <constraint firstItem="AMJ-12-IUi" firstAttribute="top" secondItem="dak-jT-Avk" secondAttribute="bottom" constant="9" id="pwT-ab-f0O"/>
+                    <constraint firstItem="AMJ-12-IUi" firstAttribute="top" secondItem="dak-jT-Avk" secondAttribute="bottom" constant="3" id="pwT-ab-f0O"/>
+                    <constraint firstItem="baf-Xn-054" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="16" id="wQT-CR-eqt"/>
                     <constraint firstItem="YkB-xl-zeO" firstAttribute="top" secondItem="glh-rJ-Y96" secondAttribute="top" id="yK2-8y-Olf"/>
-                    <constraint firstItem="AMJ-12-IUi" firstAttribute="leading" secondItem="YkB-xl-zeO" secondAttribute="trailing" constant="15" id="zX9-49-dvW"/>
                 </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="backImageView" destination="YkB-xl-zeO" id="WUN-c8-9uI"/>
+                <outlet property="detailsLabel" destination="AMJ-12-IUi" id="e4A-Fn-4rB"/>
+                <outlet property="priceBadge" destination="baf-Xn-054" id="BYv-Dc-knz"/>
+                <outlet property="titileLabel" destination="dak-jT-Avk" id="f5O-ra-wT5"/>
+            </connections>
             <point key="canvasLocation" x="296" y="417.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="test_bg" width="1224" height="1632"/>
+        <image name="profile_price_label" width="8" height="24"/>
     </resources>
 </document>
