--- a/Klike/Interfaces/ExploreEventCell.xib
+++ b/Klike/Interfaces/ExploreEventCell.xib
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="475" id="eX6-4e-HNJ" customClass="KLExploreEventCell">
-            <rect key="frame" x="0.0" y="-2" width="320" height="475"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="ExploreEventCell" id="eX6-4e-HNJ" customClass="KLExploreEventCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="377"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eX6-4e-HNJ" id="MDd-5b-irE">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="03s-Ja-1jV">
-                        <rect key="frame" x="0.0" y="466" width="320" height="8"/>
-                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="8" id="Vrv-CI-SFb"/>
-                            <constraint firstAttribute="height" constant="8" id="eOQ-M6-WgC"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Vrv-CI-SFb"/>
-                            </mask>
-                        </variation>
-                    </view>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6zf-4E-H0F" customClass="PFImageView">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="216"/>
                         <color key="backgroundColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.21960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -38,27 +25,114 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="ic_event_type_01" translatesAutoresizingMaskIntoConstraints="NO" id="voe-jy-yDP">
-                        <rect key="frame" x="8" y="224" width="24" height="32"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_event_type_12" translatesAutoresizingMaskIntoConstraints="NO" id="voe-jy-yDP">
+                        <rect key="frame" x="13" y="224" width="16" height="22"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="32" id="qir-LB-URb"/>
-                            <constraint firstAttribute="width" constant="24" id="sMP-1g-3IB"/>
+                            <constraint firstAttribute="height" constant="22" id="qir-LB-URb"/>
+                            <constraint firstAttribute="width" constant="16" id="sMP-1g-3IB"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Party" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pig-zu-I6l">
+                        <rect key="frame" x="32" y="229" width="26" height="13"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
+                        <color key="textColor" red="0.70196078431372544" green="0.70196078431372544" blue="0.74117647058823533" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="explore_slash" translatesAutoresizingMaskIntoConstraints="NO" id="uxG-8g-BsG">
+                        <rect key="frame" x="63" y="233" width="3" height="8"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="casual dress" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4d-IR-kQ3">
+                        <rect key="frame" x="70" y="230" width="234" height="13"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="11"/>
+                        <color key="textColor" red="0.70196078429999997" green="0.70196078429999997" blue="0.74117647060000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Beach Party" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tH-OH-tc2">
+                        <rect key="frame" x="15" y="244" width="288" height="24"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dec 23, 5 miles — North Beach" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ceK-f4-glB">
+                        <rect key="frame" x="15" y="276" width="288" height="14"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="03s-Ja-1jV">
+                        <rect key="frame" x="0.0" y="368" width="320" height="8"/>
+                        <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="8" id="Vrv-CI-SFb"/>
+                            <constraint firstAttribute="height" constant="8" id="eOQ-M6-WgC"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Vrv-CI-SFb"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="adW-vl-C7x">
+                        <rect key="frame" x="15" y="168" width="57" height="32"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                        <color key="tintColor" red="0.015686274510000001" green="0.58039215690000001" blue="0.70196078429999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <inset key="contentEdgeInsets" minX="12" minY="0.0" maxX="12" maxY="3"/>
+                        <state key="normal" title="Free" backgroundImage="home_price_label">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="03s-Ja-1jV" firstAttribute="leading" secondItem="MDd-5b-irE" secondAttribute="leading" id="1HG-LZ-XRp"/>
+                    <constraint firstItem="2tH-OH-tc2" firstAttribute="leading" secondItem="MDd-5b-irE" secondAttribute="leading" constant="15" id="8JL-Tm-tuG"/>
                     <constraint firstAttribute="trailing" secondItem="6zf-4E-H0F" secondAttribute="trailing" id="B3U-pS-Fkp"/>
+                    <constraint firstItem="2tH-OH-tc2" firstAttribute="top" secondItem="voe-jy-yDP" secondAttribute="bottom" constant="-2" id="B6L-sA-Ldd"/>
+                    <constraint firstItem="ceK-f4-glB" firstAttribute="top" secondItem="2tH-OH-tc2" secondAttribute="bottom" constant="8" id="DHR-bN-E5e"/>
+                    <constraint firstItem="voe-jy-yDP" firstAttribute="top" secondItem="adW-vl-C7x" secondAttribute="bottom" constant="24" id="HaI-zU-yoe"/>
+                    <constraint firstItem="ceK-f4-glB" firstAttribute="leading" secondItem="MDd-5b-irE" secondAttribute="leading" constant="15" id="KJJ-Zl-IQz"/>
+                    <constraint firstItem="o4d-IR-kQ3" firstAttribute="centerY" secondItem="Pig-zu-I6l" secondAttribute="centerY" constant="1" id="LRZ-OK-d51"/>
+                    <constraint firstItem="voe-jy-yDP" firstAttribute="centerY" secondItem="Pig-zu-I6l" secondAttribute="centerY" id="PiC-Ec-ROn"/>
                     <constraint firstAttribute="trailing" secondItem="03s-Ja-1jV" secondAttribute="trailing" id="RJI-A5-poy"/>
+                    <constraint firstItem="o4d-IR-kQ3" firstAttribute="leading" secondItem="Pig-zu-I6l" secondAttribute="trailing" constant="8" id="SCa-bF-pUl"/>
+                    <constraint firstItem="o4d-IR-kQ3" firstAttribute="leading" secondItem="uxG-8g-BsG" secondAttribute="leading" constant="7" id="WhW-G2-BBJ"/>
+                    <constraint firstAttribute="trailing" secondItem="2tH-OH-tc2" secondAttribute="trailing" constant="17" id="ZSE-d2-Xy6"/>
+                    <constraint firstItem="voe-jy-yDP" firstAttribute="top" secondItem="6zf-4E-H0F" secondAttribute="bottom" constant="8" id="ZUo-Va-B10"/>
+                    <constraint firstAttribute="trailing" secondItem="ceK-f4-glB" secondAttribute="trailing" constant="17" id="ZgC-mf-Vpb"/>
+                    <constraint firstAttribute="trailing" secondItem="o4d-IR-kQ3" secondAttribute="trailing" constant="16" id="bcv-vE-6k9"/>
                     <constraint firstAttribute="bottom" secondItem="03s-Ja-1jV" secondAttribute="bottom" id="bov-7o-Ojj"/>
                     <constraint firstItem="6zf-4E-H0F" firstAttribute="leading" secondItem="MDd-5b-irE" secondAttribute="leading" id="byy-XZ-WRk"/>
+                    <constraint firstItem="adW-vl-C7x" firstAttribute="leading" secondItem="MDd-5b-irE" secondAttribute="leading" constant="15" id="eRP-RA-EKK"/>
                     <constraint firstItem="6zf-4E-H0F" firstAttribute="top" secondItem="MDd-5b-irE" secondAttribute="top" id="guN-j6-0IH"/>
+                    <constraint firstItem="Pig-zu-I6l" firstAttribute="centerY" secondItem="uxG-8g-BsG" secondAttribute="centerY" constant="-1.5" id="hqm-r4-yRO"/>
+                    <constraint firstItem="03s-Ja-1jV" firstAttribute="top" secondItem="6zf-4E-H0F" secondAttribute="bottom" constant="152" id="lLc-eh-eme"/>
+                    <constraint firstItem="voe-jy-yDP" firstAttribute="leading" secondItem="MDd-5b-irE" secondAttribute="leading" constant="13" id="lQU-IA-F8I"/>
+                    <constraint firstItem="Pig-zu-I6l" firstAttribute="leading" secondItem="voe-jy-yDP" secondAttribute="trailing" constant="3" id="q2R-ti-xww"/>
+                    <constraint firstItem="Pig-zu-I6l" firstAttribute="trailing" secondItem="uxG-8g-BsG" secondAttribute="trailing" constant="-8" id="uw5-Et-91m"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="SCa-bF-pUl"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="562" y="288.5"/>
+            <connections>
+                <outlet property="backImage" destination="6zf-4E-H0F" id="Xcq-IQ-g8s"/>
+                <outlet property="detailsLabel" destination="ceK-f4-glB" id="5zW-YD-B69"/>
+                <outlet property="dressCodeLabel" destination="o4d-IR-kQ3" id="wIk-Po-Jb5"/>
+                <outlet property="slashImageView" destination="uxG-8g-BsG" id="yJC-Fy-EEm"/>
+                <outlet property="titleLabel" destination="2tH-OH-tc2" id="obK-tT-SYG"/>
+                <outlet property="typeIcon" destination="voe-jy-yDP" id="ytX-EN-uYq"/>
+                <outlet property="typeLabel" destination="Pig-zu-I6l" id="Aq9-5b-lcY"/>
+            </connections>
+            <point key="canvasLocation" x="565" y="288.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="ic_event_type_01" width="24" height="32"/>
+        <image name="explore_slash" width="3" height="8"/>
+        <image name="home_price_label" width="11" height="32"/>
+        <image name="ic_event_type_12" width="24" height="32"/>
     </resources>
 </document>
